# rarexsec-ntuples

./: .setup.sh  CMakeLists.txt  Makefile  README.md  hub_preview.C  rarexsec-config.cmake.in  rootlogon.C
app/: CMakeLists.txt  EventReader.h  RunnerParser.h  cnn_friend_register.cpp  hub_attach_friends.cpp  main.cpp  plot_example.C  print_root_structure.C  snapshot.cpp  snapshot_analysis.cpp  snapshot_training.cpp  training_pool.cpp
app/examples/: EventReader.h
apps/: CMakeLists.txt  ExampleInterface.h  RunnerParser.h  main.cpp  plot_example.C  training_pool.cpp
apps/rarexsec-runner/: CMakeLists.txt  main.cpp
cmake/: rarexsec-config.cmake.in  rarexsecConfig-compat.cmake.in  rarexsecConfig.cmake.in
config/: README.md  analysis-recipe.json  recipe-template.json
config/catalogs/: samples.json
config/catalogues/: samples.json
config/data/catalogues/: samples.json
config/scripts/: pot-summary.sh
config/tools/: build-catalog.py  build-catalogue.py
data/: README.md  analysis-recipe.json  recipe-template.json  samples.json
examples/: SnapshotPlotInterface.h
include/rarexsec/: AnalysisDataLoader.h  AnalysisKey.h  BeamPeriodConfig.h  BeamPeriodConfigLoader.h  BeamPeriodConfigRegistry.h  BeamPeriodConfigurationLoader.h  BeamPeriodConfigurationRegistry.h  BlipProcessor.h  Catalog.h  Catalogue.h  ColumnValidation.h  ConfiguredSample.h  EventProcessorStage.h  FilterExpression.h  FriendWriter.h  HubCatalog.h  HubDataFrame.h  HubFriendLinker.h  IEventProcessor.h  Logger.h  LoggerUtils.h  LoggingUtilities.h  MuonSelectionProcessor.h  NuMuCCSelectionProcessor.h  PreselectionProcessor.h  ProcessorPipeline.h  ReconstructionProcessor.h  RunConfig.h  RunConfigLoader.h  RunConfigRegistry.h  SampleDataset.h  SampleDefinition.h  SampleDescriptor.h  SamplePipeline.h  SelectionCatalogue.h  SelectionQuery.h  Selections.h  ShardWriter.h  SnapshotPipelineBuilder.h  TruthChannelProcessor.h  (+3 more)
include/rarexsec/detail/: HubDataFrameImpl.h
include/rarexsec/processing/: AnalysisDataLoader.h  AnalysisKey.h  BeamPeriodConfigurationLoader.h  BlipProcessor.h  ConfiguredSample.h  IEventProcessor.h  MuonSelectionProcessor.h  NuMuCCSelectionProcessor.h  PreSelectionProcessor.h  PreselectionProcessor.h  ReconstructionProcessor.h  RunConfig.h  RunConfigLoader.h  RunConfigRegistry.h  SampleDataset.h  SampleDefinition.h  SampleTypes.h  SelectionQuery.h  TruthChannelProcessor.h  VariableRegistry.h  WeightProcessor.h
include/rarexsec/utils/: Logger.h
libs/processing/: CMakeLists.txt
libs/processing/include/rarexsec/logging/: Logger.h
libs/processing/include/rarexsec/processing/: AnalysisDataLoader.h  BeamPeriodConfiguration.h  BeamPeriodConfigurationRegistry.h  IEventProcessor.h  MuonSelectionProcessor.h  NuMuCCSelectionProcessor.h  PreselectionProcessor.h  ReconstructionProcessor.h  RunConfig.h  RunConfigLoader.h  RunConfigRegistry.h  SampleDataset.h  SampleDefinition.h  SampleTypes.h  SelectionQuery.h  VariableRegistry.h  WeightProcessor.h
libs/processing/include/rarexsec/utils/: Logger.h
libs/processing/src/: AnalysisDataLoader.cpp  BeamPeriodConfiguration.cpp  BeamPeriodConfigurationLoader.cpp  BeamPeriodConfigurationRegistry.cpp  ConfiguredSample.cpp  MuonSelectionProcessor.cpp  NuMuCCSelectionProcessor.cpp  PreselectionProcessor.cpp  ReconstructionProcessor.cpp  RunConfig.cpp  RunConfigLoader.cpp  RunConfigRegistry.cpp  SampleDefinition.cpp  TruthChannelProcessor.cpp  WeightProcessor.cpp
macros/: plot_snapshot.C
main/: CMakeLists.txt  RunnerCLI.h  SnapshotExplorer.h  cnn_snapshot.cpp  main.cpp  plot_example.C  training_pool.cpp  training_pool_generator.cpp
src/: AnalysisDataLoader.cpp  BeamPeriodConfig.cpp  BeamPeriodConfigLoader.cpp  BeamPeriodConfigRegistry.cpp  BeamPeriodConfiguration.cpp  BeamPeriodConfigurationLoader.cpp  BeamPeriodConfigurationRegistry.cpp  BlipProcessor.cpp  CMakeLists.txt  ColumnValidation.cpp  ConfiguredSample.cpp  FriendWriter.cpp  HubCatalog.cpp  HubDataFrame.cpp  HubFriendLinker.cpp  MuonSelectionProcessor.cpp  NuMuCCSelectionProcessor.cpp  PreselectionProcessor.cpp  RarexsecDictLinkDef.h  ReconstructionProcessor.cpp  RunConfig.cpp  RunConfigLoader.cpp  RunConfigRegistry.cpp  SampleDefinition.cpp  SamplePipeline.cpp  Selections.cpp  ShardWriter.cpp  SnapshotPipelineBuilder.cpp  TruthChannelProcessor.cpp  WeightProcessor.cpp  main.cpp
src/processing/: AnalysisDataLoader.cpp  BeamPeriodConfigurationLoader.cpp  CMakeLists.txt
src/processing/include/rarexsec/processing/: AnalysisDataLoader.h  IEventProcessor.h  SampleDefinition.h  TruthChannelProcessor.h
src/processing/include/rarexsec/processing/selection/: Catalog.h
src/processing/src/: AnalysisDataLoader.cpp  BlipProcessor.cpp  WeightProcessor.cpp
tests/: CMakeLists.txt  SelectionProcessor.test.cpp  SnapshotAnalysisRegressionTest.cpp  SnapshotPipelineBuilderTests.cpp  WeightProcessor.test.cpp  selection_catalogue_tests.cpp
tests/integration/: create_test_sample.C  run_snapshot_analysis_imt.sh.in
tools/: build-catalogue.py  hub_preview.C
